src/binary/wifi_mgmr_api.rs

extern "C" {
    pub fn wifi_mgmr_api_rate_config(config: u16) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_conf_max_sta(max_sta_supported: u8) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_ifaceup() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_sniffer_enable() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_ap_start(
        ssid: *mut crate::binary::c_types::c_char,
        passwd: *mut crate::binary::c_types::c_char,
        channel: crate::binary::c_types::c_int,
        hidden_ssid: u8,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_ap_stop() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_idle() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_channel_set(
        channel: crate::binary::c_types::c_int,
        use_40Mhz: crate::binary::c_types::c_int,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_raw_send(
        pkt: *mut u8,
        len: crate::binary::c_types::c_int,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_set_country_code(
        country_code: *mut crate::binary::c_types::c_char,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_fw_disconnect() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_fw_scan() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_fw_powersaving(
        mode: crate::binary::c_types::c_int,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_disable_autoreconnect() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_enable_autoreconnect() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_denoise_enable() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_denoise_disable() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_scan_item_beacon(
        channel: u8,
        rssi: i8,
        auth: u8,
        mac: *mut u8,
        ssid: *mut u8,
        len: crate::binary::c_types::c_int,
        ppm_abs: i8,
        ppm_rel: i8,
        cipher: u8,
    ) -> crate::binary::c_types::c_int;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct file {
    pub _address: u8,
}
